# veil

./: .coderabbit.yaml  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  PROMPT.md  README.md  ralph.sh
.cargo/: config.toml
.claude/: settings.json
.claude/hooks/: pre-push-gate.sh
.github/workflows/: ci.yml  release.yml
crates/veil/: Cargo.toml
crates/veil-aggregator/: Cargo.toml
crates/veil-aggregator/benches/: jsonl_parsing.rs  session_store.rs
crates/veil-aggregator/src/: adapter.rs  lib.rs  live_state_cache.rs  live_state_resolver.rs  registry.rs  store.rs  testutil.rs  title.rs
crates/veil-aggregator/src/claude_code/: adapter.rs  discovery.rs  jsonl.rs  mod.rs  parser.rs
crates/veil-aggregator/src/claude_code/testdata/: compact_summary_session.jsonl  large_session.jsonl  malformed_lines.jsonl  multi_turn_session.jsonl  sidechain_session.jsonl  simple_session.jsonl  unicode_content.jsonl
crates/veil-core/: Cargo.toml
crates/veil-core/benches/: layout.rs  state.rs
crates/veil-core/proptest-regressions/: layout.txt
crates/veil-core/src/: config.rs  dir_checker.rs  error.rs  focus.rs  git_checker.rs  keyboard.rs  layout.rs  lib.rs  lifecycle.rs  live_state.rs  message.rs  navigation.rs  notification.rs  osc_parse.rs  pr_checker.rs  session.rs  state.rs  update.rs  workspace.rs
crates/veil-core/src/config/: diff.rs  discovery.rs  mod.rs  model.rs  parse.rs  watcher.rs
crates/veil-core/src/testdata/: invalid_config.toml  minimal_config.toml  unknown_fields_config.toml  valid_config.toml  workspace_state.json
crates/veil-core/tests/: fixture_validation.rs
crates/veil-e2e/: Cargo.toml
crates/veil-e2e/src/: lib.rs
crates/veil-e2e/tests/: smoke.rs
crates/veil-ghostty/: Cargo.toml  build.rs
crates/veil-ghostty/src/: error.rs  ffi.rs  lib.rs  render_state.rs  terminal.rs
crates/veil-pty/: Cargo.toml
crates/veil-pty/src/: error.rs  lib.rs  manager.rs  posix.rs  types.rs  windows.rs
crates/veil-scaffold-tests/: Cargo.toml
crates/veil-scaffold-tests/src/: lib.rs
crates/veil-shell/: Cargo.toml
crates/veil-shell/src/: agent_detector.rs  env_detector.rs  event.rs  lib.rs  osc7.rs  process_list.rs  tracker.rs
crates/veil-socket/: Cargo.toml
crates/veil-socket/src/: connection.rs  dispatcher.rs  error_conversion.rs  lib.rs  rpc.rs  server.rs  transport.rs
crates/veil-socket/src/handlers/: mod.rs  stub.rs  workspace.rs
crates/veil-tracing/: Cargo.toml
crates/veil-tracing/src/: lib.rs
crates/veil-tracing/tests/: tracing_init.rs
crates/veil-ui/: Cargo.toml
crates/veil-ui/src/: conversation_list.rs  lib.rs  sidebar.rs  time_fmt.rs  workspace_list.rs
crates/veil/src/: action_dispatch.rs  aggregator_actor.rs  bootstrap.rs  config_reload.rs  egui_integration.rs  font_pipeline.rs  frame.rs  key_translation.rs  main.rs  quad_builder.rs  renderer.rs  shader.wgsl  sidebar_wiring.rs  socket_actor.rs  terminal_map.rs  text_shader.wgsl  vertex.rs
crates/veil/src/font/: atlas.rs  loader.rs  mod.rs  rasterizer.rs  shaper.rs  text_vertex.rs
docs/plans/: 2026-04-22-ralph-loop-v3.md
docs/prd/: prd.md
docs/specs/: 2026-04-22-ralph-loop-v3-design.md  VEI-10-app-shell.md  VEI-11-workspace-manager.md  VEI-12-egui-sidebar.md  VEI-13-conversations-tab.md  VEI-14-session-aggregator.md  VEI-15-claude-code-adapter.md  VEI-16-socket-api.md  VEI-17-config-system.md  VEI-18-notification-system.md  VEI-19-observability-tracing.md  VEI-20-error-handling.md  VEI-21-testing-infrastructure.md  VEI-22-distribution-update-notifications.md  VEI-23-live-state-awareness.md  VEI-24-shell-integration.md  VEI-5-project-scaffolding.md  VEI-6-libghosty-ffi.md  VEI-7-wgpu-rendering-pipeline.md  VEI-74-app-bootstrap.md  VEI-75-keyboard-input-wiring.md  VEI-76-pty-output-wiring.md  VEI-77-wire-render-state.md  VEI-78-wire-egui-sidebar.md  VEI-79-wire-config-startup.md  VEI-8-font-rendering.md  VEI-80-wire-aggregator-socket.md  VEI-81-wire-pty-terminal-map.md  VEI-82-wire-font-pipeline-frame-geometry.md  VEI-83-text-texture-rendering.md  VEI-84-fix-egui-text-rendering.md  VEI-9-pty-management.md
docs/system_design/: system_design.md
docs/ui_design/: ui_design.md
packaging/aur/: PKGBUILD
packaging/homebrew/: veil.rb
packaging/scoop/: veil.json
packaging/winget/: veil.yaml
