[workspace]
resolver = "2"
members = [
    "crates/veil",
    "crates/veil-core",
    "crates/veil-ghostty",
    "crates/veil-ui",
    "crates/veil-pty",
    "crates/veil-aggregator",
    "crates/veil-socket",
    "crates/veil-scaffold-tests",
    "crates/veil-e2e",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.92.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/veil-term/veil"
authors = ["Christopher Story"]

[workspace.dependencies]
thiserror = "2"
anyhow = "1"
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
rusqlite = { version = "0.35", features = ["bundled"] }
serde_json = "1"
dirs = "6"
tempfile = "3"
winit = "0.30"
libc = "0.2"
proptest = "1"
mockall = "0.13"
criterion = { version = "0.5", features = ["html_reports"] }
toml = "0.8"
notify = "8"
wgpu = "24"
bytemuck = { version = "1", features = ["derive"] }
pollster = "0.4"
swash = "0.2"
rustybuzz = "0.20"
egui = "0.34"
egui-wgpu = "0.34"
egui-winit = { version = "0.34", default-features = false }

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
