[package]
name = "veil-aggregator"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
veil-core = { path = "../veil-core" }
tracing.workspace = true
thiserror.workspace = true
chrono.workspace = true
rusqlite.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
dirs.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
