[package]
name = "veil-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
chrono.workspace = true
tokio = { workspace = true, features = ["sync"] }

[dev-dependencies]
tokio = { workspace = true, features = ["sync", "macros", "rt", "time"] }

[lints]
workspace = true
