[package]
name = "veil-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
chrono.workspace = true
tokio = { workspace = true, features = ["sync"] }

[dev-dependencies]
tokio = { workspace = true, features = ["sync", "macros", "rt", "time"] }
proptest.workspace = true
mockall.workspace = true
criterion.workspace = true
toml.workspace = true
serde_json.workspace = true

[[bench]]
name = "layout"
harness = false

[[bench]]
name = "state"
harness = false

[lints]
workspace = true
