[package]
name = "veil-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[dependencies]
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
tokio = { workspace = true, features = ["sync"] }
toml.workspace = true
notify.workspace = true
dirs.workspace = true
ureq.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["sync", "macros", "rt", "time"] }
proptest.workspace = true
mockall.workspace = true
criterion.workspace = true
serde_json.workspace = true
tempfile.workspace = true

[[bench]]
name = "layout"
harness = false

[[bench]]
name = "state"
harness = false

[lints]
workspace = true
