[package]
name = "veil-e2e"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false
description.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[dependencies]
veil-socket = { path = "../veil-socket" }
veil-core = { path = "../veil-core" }
thiserror.workspace = true
tokio.workspace = true
serde_json.workspace = true
tempfile.workspace = true

[lints]
workspace = true
