[package]
name = "veil-ghostty"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[dependencies]
veil-core = { path = "../veil-core" }
tracing.workspace = true
thiserror.workspace = true

[lints]
workspace = true
