[package]
name = "veil-pty"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
veil-core = { path = "../veil-core" }
tracing.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["sync"] }

[target.'cfg(unix)'.dependencies]
libc.workspace = true

[lints]
workspace = true
