[package]
name = "veil-shell"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
veil-core = { path = "../veil-core" }
thiserror.workspace = true
tracing.workspace = true
libc.workspace = true

[dev-dependencies]
tempfile.workspace = true
proptest.workspace = true

[lints]
workspace = true
