[package]
name = "veil-socket"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
veil-core = { path = "../veil-core" }
tracing.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }

[dev-dependencies]
mockall.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["full"] }

[lints]
workspace = true
