[package]
name = "veil-socket"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[dependencies]
veil-core = { path = "../veil-core" }
tracing.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = ["full"] }

[dev-dependencies]
mockall.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["full"] }
serial_test = "3"

[lints]
workspace = true
