[package]
name = "veil-tracing"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
tracing.workspace = true
tracing-subscriber = { workspace = true }
tracing-appender.workspace = true
dirs.workspace = true

[target.'cfg(unix)'.dependencies]
signal-hook.workspace = true

[dev-dependencies]
tempfile.workspace = true

[lints]
workspace = true
