[package]
name = "veil-ui"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
veil-core = { path = "../veil-core" }
tracing.workspace = true
egui.workspace = true
dirs = { workspace = true }

[lints]
workspace = true
