[package]
name = "veil"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true
readme.workspace = true

[dependencies]
veil-core = { path = "../veil-core" }
veil-ghostty = { path = "../veil-ghostty" }
veil-ui = { path = "../veil-ui" }
veil-pty = { path = "../veil-pty" }
veil-aggregator = { path = "../veil-aggregator" }
veil-socket = { path = "../veil-socket" }
veil-tracing = { path = "../veil-tracing" }
anyhow.workspace = true
tracing.workspace = true
winit = { workspace = true }
tokio = { workspace = true }
wgpu = { workspace = true }
bytemuck = { workspace = true }
pollster = { workspace = true }
swash = { workspace = true }
rustybuzz = { workspace = true }
egui = { workspace = true }
egui-wgpu = { workspace = true }
egui-winit = { workspace = true }
dirs.workspace = true

[dev-dependencies]
tempfile = { workspace = true }
chrono = { workspace = true }

[lints]
workspace = true
